--- a/DateCalculator/index.html
+++ b/DateCalculator/index.html
@@ -5,22 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Калькулятор дат</title>
+    <link rel="stylesheet" href="./css/style.css">
     <script type="module" src="./js/main.js"></script>
 </head>
 <body>
-    <h2>Калькулятор дат</h2>
-    <form id="calcDate">
-        <label for="dateFrom">
-            Первая дата:
-            <input type="date" name="dateFrom" id="dateFrom">
-        </label>
-        <label for="dateTo">
-            Вторая дата:
-            <input type="date" name="dateTo" id="dateTo">
-        </label>
-        <button type="submit">Рассчитать промежуток</button>
-    </form>
-    <p id="output">
-    </p>
+    <div class="nav">
+        <button class="btn" data-name="calc">Калькулятор</button>
+        <button class="btn" data-name="timer">Таймер</button>
+    </div>
+    <div class="calc visible">
+        <h2>Калькулятор дат</h2>
+        <form id="calcDate" class="forma">
+            <label for="dateFrom">
+                Первая дата:
+                <input type="date" name="dateFrom" id="dateFrom">
+            </label>
+            <label for="dateTo">
+                Вторая дата:
+                <input type="date" name="dateTo" id="dateTo">
+            </label>
+            <button class="btn" type="submit">Рассчитать промежуток</button>
+        </form>
+        <p id="output">
+        </p>
+    </div>
+    <div class="timer visible">
+        <h2>Таймер</h2>
+        <h1><span class="timer-seconds">00</span></h1>
+        <div class="timer-menu">
+            <input type="number" name="setTimer" id="setTimer" min="1" max="60">  
+            <button class="btn btn-start">СТАРТ</button>
+            <button class="btn btn-stop">СТОП</button>
+        </div>
+        <p class="out-timer"></p>
+    </div>
 </body>
 </html>
