--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Калькулятор дат</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <script type="module" src="./js/main.js"></script>
-</head>
-<body>
+    <title>Калькулятор Дат и Таймер</title>
+    <script defer src="main.6a2ddd426dbc6a6e2144.js"></script><link href="main.ac1f45cc57865dc4df65.css" rel="stylesheet"></head>
+<body>      
     <div class="nav">
         <button class="btn" data-name="calc">Калькулятор</button>
         <button class="btn" data-name="timer">Таймер</button>
